# ConsoleFW

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/CFW/: cfw.h
src/: CMakeLists.txt  draw.c  init.c  input.c  internal.h  ncurses_draw.c  ncurses_init.c  ncurses_input.c  ncurses_internal.h
